update: delete phoneNumber
