# api-stub-server/api/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Unicorn API
   description: API for managing unicorn.
-  version: 1.3.0
+  version: 1.3.1
 servers:
 - url: https://api-stub-server-384446500375.asia-east1.run.app/
   description: Backend server
@@ -2973,14 +2973,9 @@ components:
           type: string
           description: 画像URL
           example: https://placehold.jp/150x150.png
-        phoneNumber:
-          type: string
-          description: 家族の電話番号
-          example: "09012345678"
       example:
         firstName: 太郎
         lastName: 山田
-        phoneNumber: "09012345678"
         familyEmailID: f47ac10b-58cc-4372-a567-0e02b2c3d479
         iconImageUrl: https://placehold.jp/150x150.png
         email: sample@sample.com
@@ -3003,10 +2998,6 @@ components:
           type: string
           description: 画像URL
           example: https://placehold.jp/150x150.png
-        phoneNumber:
-          type: string
-          description: 家族の電話番号
-          example: "09012345678"
     FamilyEmailResponse:
       type: object
       properties:
@@ -3029,14 +3020,9 @@ components:
           type: string
           description: 画像URL
           example: https://placehold.jp/150x150.png
-        phoneNumber:
-          type: string
-          description: 家族の電話番号
-          example: "09012345678"
       example:
         firstName: 太郎
         lastName: 山田
-        phoneNumber: "09012345678"
         familyEmailID: f47ac10b-58cc-4372-a567-0e02b2c3d479
         iconImageUrl: https://placehold.jp/150x150.png
         email: sample@sample.com
@@ -3601,13 +3587,11 @@ components:
         data:
         - firstName: 太郎
           lastName: 山田
-          phoneNumber: "09012345678"
           familyEmailID: f47ac10b-58cc-4372-a567-0e02b2c3d479
           iconImageUrl: https://placehold.jp/150x150.png
           email: sample@sample.com
         - firstName: 太郎
           lastName: 山田
-          phoneNumber: "09012345678"
           familyEmailID: f47ac10b-58cc-4372-a567-0e02b2c3d479
           iconImageUrl: https://placehold.jp/150x150.png
           email: sample@sample.com
